# crewai-gambling-unifier

./: .gitignore  PROJECT_SUBMISSION.md  README.md  README_SUBMISSION.md  SUBMISSION_GUIDE.md  Sample_input_output.md  TECHNICAL_ARCHITECTURE.md  chat.py  crewai_python_script.py  demo_runner.py  pyproject.toml  sample_demo.py
src/gambling_unifier/: crew.py  flow.py  guardrails.py  main.py
src/gambling_unifier/config/: agents.yaml  tasks.yaml
src/gambling_unifier/tools/: custom_tool.py  rag_tool.py
